Fix warning deprecate new URL in java 21 (#2193)